--- a/src/views/createUser.ejs
+++ b/src/views/createUser.ejs
@@ -102,8 +102,8 @@
                               <td><%= users[i].phonenumber %></td>
                               <td><%= users[i].gender ? 'Male' : 'Female'%></td>
                               <td>
-                                <button type="button" class="btn btn-warning">Edit</button>
-                                <button type="button" class="btn btn-danger">Delete</button>
+                                <a type="button" href="/edit-user?id=<%=users[i].id %>" class="btn btn-warning">Edit</a>
+                                <a type="button" href="/delete-user?id=<%=users[i].id %>" class="btn btn-danger">Delete</a>
                               </td>
                             </tr>
                          <% } %>
